--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 .idea/
 素材/音乐/LD54-soundtrack/Backup/*
+Unity工程/LD54/Library/*
+Unity工程/LD54/ProjectSettings/*
+Unity工程/LD54/Logs/*
+Unity工程/LD54/packages/*
+Unity工程/LD54/Temp/*
+Unity工程/LD54/UserSettings/*
