--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ Unity工程/LD54/Logs/*
 Unity工程/LD54/packages/*
 Unity工程/LD54/Temp/*
 Unity工程/LD54/UserSettings/*
+Unity工程/LD54/obj/*
+Unity工程/LD54/LD54.sln
+Unity工程/LD54/Assembly-CSharp.csproj
