--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Unity工程/LD54/UserSettings/*
 Unity工程/LD54/obj/*
 Unity工程/LD54/LD54.sln
 Unity工程/LD54/Assembly-CSharp.csproj
+Unity工程/LD54/LD54.sln.DotSettings.user
